@@ -1,4 +1,4 @@
-CURRENT_VERSION = "3.0.5"
+CURRENT_VERSION = "3.0.6"
 
 
 def parse(version):
