@@ -1,5 +1,6 @@
 kathara (__VERSION__-__DEBIAN_PACKAGE_VERSION____UBUNTU_VERSION__) __UBUNTU_VERSION__; urgency=low
 
-  * Minor fixes
+  * Fix ltest exec commands
+  * Fix check command
 
  -- Mariano Scazzariello <******@gmail.com>  __DATE__
